Home and about pages

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,8 @@
-<div class="row">
+<div class="row mt-4">
   <div class="col-3">
     sidebar
   </div>
-  <h1>Hello World</h1>
   <div class="col">
-    Router
+    <shared-about-page></shared-about-page>
   </div>
 </div>
