--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,6 @@
     sidebar
   </div>
   <div class="col">
-    <shared-about-page></shared-about-page>
+    <router-outlet></router-outlet>
   </div>
 </div>
