--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -15,4 +15,10 @@
         class="list-group-item ">
         About Page
     </li>
+    <li 
+        routerLink="contact"
+        routerLinkActive="active"
+        class="list-group-item ">
+        Contact Page
+    </li>
 </ul>
