--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -3,7 +3,10 @@
 
 <div class="row">
     <div class="col">
-        <shared-search-box placeholder="Buscar por capital"></shared-search-box>
+        <shared-search-box 
+        placeholder="Buscar por capital"
+        (onValue)="searchByCapital($event)"
+        ></shared-search-box>
     </div>
 
 </div>
