--- a/src/app/shared/components/search-box/search-box.component.html
+++ b/src/app/shared/components/search-box/search-box.component.html
@@ -1,5 +1,7 @@
 <input 
     type="text"
     [placeholder]="placeholder"
+    (keyup.enter)="searchValue()"
     class="form-control"
+    #txtSearchInput
     >
