--- a/src/app/shared/components/search-box/search-box.component.html
+++ b/src/app/shared/components/search-box/search-box.component.html
@@ -1,7 +1,7 @@
 <input 
     type="text"
     [placeholder]="placeholder"
-    (keyup.enter)="searchValue()"
+    (keyup.enter)="searchValue(txtSearchInput.value)"
     class="form-control"
     #txtSearchInput
     >
