--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -13,6 +13,9 @@
 
 <div class="row">
     <div class="col">
-        Tabla de resultados
+        <hr>
+        <ul>
+            <li *ngFor="let country of countries">{{ country.capital }} - {{ country.population }}</li>
+        </ul>
     </div>
 </div>
