--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -15,7 +15,9 @@
     <div class="col">
         <hr>
         <ul>
-            <li *ngFor="let country of countries">{{ country.capital }} - {{ country.population }}</li>
+            <li *ngFor="let country of countries">
+                {{ country.capital }} - {{ country.population }}
+            </li>
         </ul>
     </div>
 </div>
