--- a/src/app/countries/components/country-table/country-table.component.html
+++ b/src/app/countries/components/country-table/country-table.component.html
@@ -1,5 +1,5 @@
 <p *ngIf="countries.length === 0; else table"  class="alert alert-warning text-center">
-    No hay paises
+    No hay datos que mostrar.
 </p>
 
 <ng-template #table>
