--- a/src/app/countries/pages/country-page/country-page.component.html
+++ b/src/app/countries/pages/country-page/country-page.component.html
@@ -1,1 +1,40 @@
-<p>country-page works!</p>
+<ng-template #loading>
+    <p class="alert alert-info">Espere por favor...</p>
+</ng-template>
+
+<div *ngIf="country; else loading">
+    <div class="row">
+        <div class="col-12">
+            <h2>País: <strong>{{ country.name.common }}</strong></h2>
+        </div>
+    </div>
+    
+    <div class="row">
+        <div class="col-4">
+            <h3>Bandera</h3>
+            <img 
+                class="img-thumbnail"
+                [src]="country.flags.svg" [alt]="country.name.common">
+        </div>
+        <div class="col">
+            <ul class="list-group">
+                <li class="list-group-item">
+                    <strong>Población: {{ country.population | number }}</strong>
+                </li>
+                <li class="list-group-item">
+                    <strong>Código: {{ country.cca3 }}</strong>
+                </li>
+            </ul>
+        </div>
+    </div>
+    
+    <div class="row mt-2">
+        <div class="col">
+            <h3>Traducciones</h3>
+    
+            <div class="d-flex flex-wrap">
+                <span class="badge bg-primary m-1">{{ country.translations['bre'].common }}</span>
+            </div>
+        </div>
+    </div>
+</div>
