--- a/src/app/countries/pages/country-page/country-page.component.html
+++ b/src/app/countries/pages/country-page/country-page.component.html
@@ -34,6 +34,17 @@
     
             <div class="d-flex flex-wrap">
                 <span class="badge bg-primary m-1">{{ country.translations['bre'].common }}</span>
+                <span class="badge bg-primary m-1">{{ country.translations['ara'].common }}</span>
+                <span class="badge bg-primary m-1">{{ country.translations['ces'].common }}</span>
+                <span class="badge bg-primary m-1">{{ country.translations['deu'].common }}</span>
+                <span class="badge bg-primary m-1">{{ country.translations['fra'].common }}</span>
+                <span class="badge bg-primary m-1">{{ country.translations['hrv'].common }}</span>
+                <span class="badge bg-primary m-1">{{ country.translations['hun'].common }}</span>
+                <span class="badge bg-primary m-1">{{ country.translations['ita'].common }}</span>
+                <span class="badge bg-primary m-1">{{ country.translations['jpn'].common }}</span>
+                <span class="badge bg-primary m-1">{{ country.translations['kor'].common }}</span>
+                <span class="badge bg-primary m-1">{{ country.translations['esp'].common }}</span>
+                <span class="badge bg-primary m-1">{{ country.translations['kor'].common }}</span>
             </div>
         </div>
     </div>
