Fixing last traslation in page

--- a/src/app/countries/pages/country-page/country-page.component.html
+++ b/src/app/countries/pages/country-page/country-page.component.html
@@ -43,8 +43,7 @@
                 <span class="badge bg-primary m-1">{{ country.translations['ita'].common }}</span>
                 <span class="badge bg-primary m-1">{{ country.translations['jpn'].common }}</span>
                 <span class="badge bg-primary m-1">{{ country.translations['kor'].common }}</span>
-                <span class="badge bg-primary m-1">{{ country.translations['esp'].common }}</span>
-                <span class="badge bg-primary m-1">{{ country.translations['kor'].common }}</span>
+                <span class="badge bg-primary m-1">{{ country.translations['spa'].common }}</span>
             </div>
         </div>
     </div>
