--- a/src/app/shared/components/loading-spinner/loading-spinner.component.html
+++ b/src/app/shared/components/loading-spinner/loading-spinner.component.html
@@ -1,2 +1,4 @@
-<p>Buscando...</p>
-<mat-spinner></mat-spinner>
+<div class="d-flex align-items-center gap-3">
+    <p>Buscando...</p>
+    <mat-spinner diameter="30"></mat-spinner>
+</div>
