Refactor in search emit value

--- a/src/app/shared/components/search-box/search-box.component.html
+++ b/src/app/shared/components/search-box/search-box.component.html
@@ -1,7 +1,16 @@
-<input 
+<!-- <input 
     type="text"
     [placeholder]="placeholder"
     (keyup.enter)="searchValue(txtSearchInput.value)"
+    class="form-control"
+    #txtSearchInput
+    > -->
+
+
+<input 
+    type="text"
+    [placeholder]="placeholder"
+    (keypress)="onKeyPress(txtSearchInput.value)"
     class="form-control"
     #txtSearchInput
     >
