Adding debounce in search box component

--- a/src/app/shared/components/search-box/search-box.component.html
+++ b/src/app/shared/components/search-box/search-box.component.html
@@ -10,7 +10,7 @@
 <input 
     type="text"
     [placeholder]="placeholder"
-    (keypress)="onKeyPress(txtSearchInput.value)"
+    (keyup)="onKeyPress(txtSearchInput.value)"
     class="form-control"
     #txtSearchInput
     >
