--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -5,7 +5,7 @@
     <div class="col">
         <shared-search-box 
         placeholder="Buscar por capital"
-        (onValue)="searchByCapital($event)"
+        (onDebounce)="searchByCapital($event)"
         ></shared-search-box>
     </div>
 
