--- a/src/app/countries/pages/by-region-page/by-region-page.component.html
+++ b/src/app/countries/pages/by-region-page/by-region-page.component.html
@@ -2,11 +2,14 @@
 <hr>
 
 <div class="row">
-    <div class="col">
-        <shared-search-box 
-        placeholder="Buscar por región"
-        (onDebounce)="searchByRegion($event)"
-        ></shared-search-box>
+    <div class="col text-center">
+        <button 
+        *ngFor="let region of regions"
+        class="btn mx-2"
+        (click)="searchByRegion(region)"
+        >
+            {{ region }}
+        </button>
     </div>
 
 </div>
