--- a/src/app/countries/pages/by-region-page/by-region-page.component.html
+++ b/src/app/countries/pages/by-region-page/by-region-page.component.html
@@ -6,6 +6,7 @@
         <button 
         *ngFor="let region of regions"
         class="btn mx-2"
+        [ngClass]="{ 'btn-outline-primary': selectRegion === region}"
         (click)="searchByRegion(region)"
         >
             {{ region }}
