Adding cacheStore in by-capita component

--- a/src/app/shared/components/search-box/search-box.component.html
+++ b/src/app/shared/components/search-box/search-box.component.html
@@ -12,5 +12,6 @@
     [placeholder]="placeholder"
     (keyup)="onKeyPress(txtSearchInput.value)"
     class="form-control"
+    [value]="initialValue"
     #txtSearchInput
     >
