Adding store for data persistence

--- a/src/app/countries/pages/by-country-page/by-country-page.component.html
+++ b/src/app/countries/pages/by-country-page/by-country-page.component.html
@@ -5,6 +5,7 @@
     <div class="col">
         <shared-search-box 
         placeholder="Buscar por país"
+        [initialValue]="initialValue"
         (onDebounce)="searchByCountry($event)"
         ></shared-search-box>
     </div>
